# pl_kernel

./: .gitignore  Main.lean  PropLogicKernel.lean  README.md  lake-manifest.json  lakefile.toml  main.py  prop_logic_kernel.py  pyproject.toml  stdin.txt  uv_publish
EchoLine/: Command.lean  EchoLine.lean
PropLogicKernel/: Auto.lean  Basic.lean  Calc.lean  Hint.lean  Kernel.lean  ListMap.lean  Parse.lean  Parser.lean  ParserCombinator.lean  Print.lean  Printer.lean  PropLogicKernel.lean  REPL.lean  Resolve.lean  Resolver.lean  Search.lean  Serialize.lean  Type.lean
REPL/: Command.lean  REPL.lean
claude/: main.py  pyproject.toml
claude/examples/: check_puzzles.py
claude/py_prop_logic_kernel/: __init__.py  generate.py  puzzle.py  repl.py
claude/ts_prop_logic_kernel/: package-lock.json  package.json
claude/ts_prop_logic_kernel/src/: auto.ts  index.ts  kernel.ts  parser.ts  printer.ts
claude/web_repl/: index.html
claude/web_repl/src/: main.ts  style.css
examples/: check_puzzles.py  generate_and_check_puzzles.sh  generate_puzzles.py  pyproject.toml  upload_huggingface.py
memory/: MEMORY.md  feedback_use_uv.md
prop_logic_kernel/: kernel.py  prop.py  tactics.py  types.py
py_prop_logic_kernel/: __init__.py  client.py  generate.py  puzzle.py  repl.py
py_repl/: __init__.py  echo_line.py  repl.py
scripts/: upload_huggingface.py
ts_prop_logic_kernel/: tsconfig.json
ts_prop_logic_kernel/src/: kernel.ts  printer.ts
web_repl/: package-lock.json  package.json
web_repl/src/: main.ts
