[project]
name = "py-prop-logic-kernel"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.13.0",
    "python-dotenv>=1.2.2",
]



[tool.hatch.version]
path = "py_prop_logic_kernel/__init__.py"

[tool.uv.workspace]
members = [
    "examples",
]

[tool.hatch.build.targets.wheel]
packages = ["py_prop_logic_kernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
